# ai-bom-generator

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  VALIDATION.md  action.yml  pyproject.toml
.agents/: context-map.md
.agents/checklists/: data-pipeline.md  github-action.md
.agents/skills/data-pipeline/: SKILL.md
.agents/validations/: cli-tool.md  data-pipeline.md  default.md  dependency-upgrade.md  github-action.md  ops-change.md  release-readiness.md
.clarissimi/drafts/: 0disoft-ai-bom-generator-merged_pull_request-21.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish-pypi.yml
.ssealed/: manifest.json
diagrams/: README.md  container-view.mmd  core-runtime-flow.mmd  data-lineage.mmd  release-flow.mmd  rollback-flow.mmd  system-context.mmd
docs/: README.md
docs/adr/: 0000-template.md  0001-initial-architecture-boundaries.md  0002-contract-source-of-truth.md  0003-implementation-decision-backlog.md  0004-producer-generation-marker.md  README.md
docs/architecture/: 00-system-boundary.md  01-domain-model.md  02-runtime-flow.md  03-quality-attributes.md
docs/cli/: README.md  command-contract.md  configuration.md  output-and-exit-codes.md  shell-completion.md
docs/contracts/: config-v1.md  error-report-v1.md  output-manifest-v1.md  spdx-ai.md  summary-v1.md  warning-taxonomy-v1.md
docs/data/: README.md  lineage.md  pipeline-contract.md  privacy-and-retention.md  quality.md
docs/engineering/: 00-project-invariants.md  01-design-review-questions.md  02-code-review-checklist.md  03-performance-budget.md  04-security-baseline.md  05-testing-standard.md  06-dependency-and-change-policy.md  07-operability-and-failure-standard.md  08-threat-model.md  09-data-integrity.md
docs/exporters/: cyclonedx-json-1.7-mapping.md  spdx-ai-deferred-mapping-notes.md  spdx-ai-mapping-follow-up.md
docs/github-action/: README.md  action-contract.md  inputs-and-outputs.md  permissions.md
docs/ops/: 00-operational-contract.md  backup-and-restore.md  ci.md  config-and-env.md  disaster-recovery.md  incident-response.md  observability.md  release.md  rollback.md  secrets.md  service-levels.md
docs/product/: 00-product-brief.md  01-roadmap.md  02-spec.md  03-risk-register.md
docs/releases/: v0.6.0.md  v0.6.1.md
docs/security/: path-and-symlink-policy.md  redaction-policy.md
docs/testing/: fixture-matrix.md
examples/minimal-model-project/: MODEL_CARD.md  README.md  aibom.toml
examples/minimal-model-project/models/: model.safetensors
schemas/: aibom-config-v1.schema.json  aibom-error-report-v1.schema.json  aibom-output-manifest-v1.schema.json  aibom-spdx-ai-preview.schema.json  aibom-summary-v1.schema.json  aibom-warning-report-v1.schema.json
scripts/: benchmark_components.py  github_action_entrypoint.py  verify_github_action.py  verify_release.py  verify_wheel.py
src/ai_bom_generator/: __init__.py  __main__.py  app.py  cli.py  errors.py
src/ai_bom_generator/collectors/: __init__.py  artifacts.py  dependency_files.py  generation_marker.py  pipeline.py
tests/: test_artifact_collection.py  test_cli.py  test_conda_lock.py  test_config_loader.py  test_contract_schemas.py  test_dependency_files.py  test_dependency_parser_properties.py  test_dependency_source_evidence.py  test_error_report.py  test_examples.py  test_file_io.py  test_generation_marker.py  test_github_action_verification.py  test_hashing.py  test_json_writer.py  test_ml_ecosystem_dependency_fixtures.py  test_performance_budget.py  test_pipenv_lock.py  test_pipenv_lock_properties.py  test_poetry_lock.py  test_redaction.py  test_release_verification.py
tools/: generate_pipenv_compatibility_corpus.ts
tools/release/: check-metadata.ts  check-tooling.ts  commit-metadata.ts  commit-smoke.ts  lib.test.ts  lib.ts  metadata-lib.test.ts  metadata-lib.ts  promote.ts  release.ts  smoke-lib.test.ts  smoke-lib.ts  stage-metadata.ts  update-smoke.ts  verify.ts
(+70 files in other folders)
