[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bom-generator"
version = "0.0.11"
description = "Local AI/ML bill-of-materials generator"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "0disoft" }
]
dependencies = [
  "jsonschema>=4.25,<5"
]

[project.scripts]
ai-bom = "ai_bom_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_bom_generator = [
  "config/schema/*.json",
  "exporters/cyclonedx_json/schema/*.json",
  "exporters/cyclonedx_json/schema/LICENSE"
]
